@@ -5,6 +5,7 @@
 
           * src/object/o_arc_object.c
           * src/object/o_box_object.c
+          * src/object/o_picture_object.c
 
 2020-08-18 Wiley E. Hill <wileyhill@gmail.com>
 
